Changelog
=========


1.10.3 (unreleased)
-------------------

- Remove obsolete behaviour in Plone 5 [Nachtalb]


1.10.2 (2020-08-04)
-------------------

- Fix contenttree dependency in metadata.xml, since it has been removed with version 1.4.0. [mathias.leimgruber]
- Remove obsolete behaviors from Plone 5 profile [Nachtalb]


1.10.1 (2020-02-21)
-------------------

- Strip ldap synced values [Nachtalb]


1.10.0 (2020-02-20)
-------------------

- Support ldap scope attribute for contact sync [Nachtalb]


1.9.6 (2020-02-14)
------------------

- Fix i18n build. [djowett-ftw]
- Fix object_rename error by not trying to set Title field when renaming a Contact. [djowett-ftw]
- Brush up English in README and clarify supported versions of Plone (4.3 and 5.1). [djowett-ftw]

1.9.5 (2020-01-31)
------------------

- Fix removal of spamProtect usage. [mathias.leimgruber]


1.9.4 (2020-01-31)
------------------

- Remove usage of spamProtect script, since it's no longer available in plone 5. [mathias.leimgruber]


1.9.3 (2020-01-09)
------------------

- Add ftw.contacts portal_types translations to plone domain. [tinagerber]


1.9.2 (2019-12-14)
------------------

- Provide precompiled bundle. [tinagerber]


1.9.1 (2019-11-29)
------------------

- Use unittest instead of unittest2. [jone]


1.9.0 (2019-06-12)
------------------

- Add plone 5.1 support [busykoala]


1.8.0 (2019-04-01)
------------------

- Setup security in the in the sync script. [mbaechtold]

- Fire different event in the sync script. [mbaechtold]


1.7.2 (2019-03-13)
------------------

- Fix a bug where the "show more" button was hidden erroneously. [mbaechtold]


1.7.1 (2019-01-22)
------------------

- Fix synchronisation of images. [mbaechtold]


1.7.0 (2019-01-21)
------------------

- Support additional DX behaviors during synchronisation. [mbaechtold]


1.6.1 (2018-01-31)
------------------

- Fix contact sync for umlaut id's and group objects. [lknoepfel]


1.6.0 (2018-01-31)